# mlx5ctl

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  devcaps.c  diag_cnt.c  ifcutil.h  mlx5_ifc.h  mlx5ctl.h  mlx5ctl_misc.c  mlx5ctlu.c  mlx5ctlu.h  mlx5lib.c  mlx5lib.h  query_obj.c  reg.c  reg.h  rscdump.c
Dockerfiles/: fedora34.Dockerfile
rpm/: mlx5ctl.spec
scripts/: check-readme-compat.sh
